[gd_scene load_steps=23 format=2]

[ext_resource path="res://conquest_enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/conquest.png" type="Texture" id=2]
[ext_resource path="res://assets/conquest_attack.png" type="Texture" id=3]
[ext_resource path="res://assets/attack.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 2048, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 2560, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 3072, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 3584, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "attack",
"speed": 6.0
} ]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 1
shadow_color = Color( 0, 0, 0, 0.996078 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.588235 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 1
shadow_color = Color( 0, 0, 0, 1 )

[sub_resource type="CapsuleShape2D" id=12]
radius = 18.0
height = 460.0

[sub_resource type="CapsuleShape2D" id=13]
radius = 30.0
height = 210.0

[sub_resource type="Curve" id=14]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="Curve" id=16]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=18]
emission_shape = 2
emission_box_extents = Vector3( 10, 60, 1 )
flag_disable_z = true
spread = 180.0
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
angle_random = 1.0
angle_curve = SubResource( 15 )
scale = 15.0
scale_random = 1.0
scale_curve = SubResource( 17 )
color = Color( 1, 0.729412, 0, 1 )

[node name="ConquestEnemy" type="KinematicBody2D" groups=[
"conquest",
"enemies",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 9 )
animation = "idle"
playing = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
margin_left = 140.0
margin_top = 662.0
margin_right = 1140.0
margin_bottom = 682.0
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShootPosition" type="Position2D" parent="."]
position = Vector2( 19.9997, 0 )

[node name="Back" type="CollisionShape2D" parent="."]
position = Vector2( -25.7212, 0 )
shape = SubResource( 12 )

[node name="Front" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 5.14423, 0 )
shape = SubResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 15.3884, 0 )
amount = 35
local_coords = false
process_material = SubResource( 18 )

[node name="Attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
